# mignon-grind-by-weight

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.h.in
include/mignon-grind-by-weight/: defs.h  types.h
src/: config.c  config.h  main.c  scale.c  scale.h
src/estimators/: linear_fitting.c  linear_fitting.h  median.c  median.h
src/estimators/sample_buffer/: sample_buffer.c  sample_buffer.h
src/pages/: final_page.c  final_page.h  grinding_page.c  grinding_page.h  main_page.c  main_page.h  start_page.c  start_page.h
src/sample_buffer/: sample_buffer.c  sample_buffer.h
src/user_interface/: app.c  app.h  button.c  button.h  display.h  display_sh1107.c  display_sh1107.h
src/widgets/: target_weight_text.c  target_weight_text.h
